predictors: Clean up the predictor db after deleting individual urls

The autocomplete predictor database contains entries related to a page the user
has visited even after this page was removed from the history. These entries
are cleaned up after only the startup. This CL adds this clean up after every
removal from history.

Bug: 838897
Change-Id: Ia56de868cddf8bb0a28d288265b884c0e67458d5
Reviewed-on: https://chromium-review.googlesource.com/1043868
Commit-Queue: Alexandr Ilin <alexilin@chromium.org>
Reviewed-by: Benoit L <lizeb@chromium.org>
Reviewed-by: Christian Dullweber <dullweber@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558326}
Former-commit-id: c2a4bcefb464c1e9b1885a442b7017b1e87afc6b